# flaskygram

./: .gitignore  README.md  app.yml.default  manage-admin.py  manage.py  pyproject.toml  requirements.txt  wsgi.py
client/: bower.json
client/app/: index.html
client/app/scripts/: app.js
client/app/scripts/controllers/: auth.js  media.js  nav.js  todo.js
client/app/views/: media.html
client/test/: karma.conf.js
docs/: .bootstrapped
flaskygram/: __init__.py  config.py  database.py  extensions.py  manage.py  models.py  swagger.yaml  wsgi.py
flaskygram/admin/: views.py
flaskygram/api_1_0/: __init__.py  media.py  posts.py  response.py  schema.py  users.py
flaskygram/core/: __init__.py  views.py
flaskygram/core/accounts/: admin.py  api.py  models.py
flaskygram/core/admin/: __init__.py  views.py
flaskygram/core/api_1_0/: __init__.py  admin.py  authentication.py  models.py  response.py  schema.py
flaskygram/fixtures/: user_relations.json  users.json
flaskygram/main/: views.py
flaskygram/modules/: location.py  media.py  models.py  posts.py  tags.py
flaskygram/modules/locations/: api.py
flaskygram/modules/media/: admin.py  api.py  models.py
flaskygram/modules/posts/: api.py  models.py
flaskygram/modules/tags/: api.py  models.py
flaskygram/swagger/: swagger.yaml
flaskygram/templates/: authorize.html  base.html
migrations/versions/: 190bc87884f1_.py  441964995962_.py  5d46eced8fc3_.py  b84c7a707086_.py  c1a02d9f67f6_.py  c95d3c95190d_.py
tests/: __init__.py  test_model.py  test_post.py  test_upload.py  test_user.py
(+4 files in other folders)
