[tool.poetry]
name = "flaskygram"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask-admin = "^1.5.8"
flask-bootstrap = "^3.3.7"
flask-cors = "^3.0.10"
flask-debugtoolbar = "^0.11.0"
flask-login = "^0.5.0"
flask-mail = "^0.9.1"
flask-marshmallow = "^0.14.0"
flask-migrate = "^3.0.1"
flask-oauthlib = "^0.9.6"
flask-principal = "^0.4.0"
flask-restful = "^0.3.9"
flask-sqlalchemy = "^2.5.1"
flask-security = "^3.0.0"
flask-swagger = "^0.2.14"
flask-testing = "^0.8.1"
flask-uploads = "^0.2.1"
flask-wtf = "^0.15.1"
flask = "2.2.5"
pillow = "^8.2.0"
pyyaml = "^5.4.1"
sqlalchemy-utils = "^0.37.6"
sqlalchemy = "^1.4.17"
marshmallow-sqlalchemy = "^0.26.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.8.6"
pytz = "^2021.1"
voluptuous = "^0.12.1"
flask-admin-s3-upload = "^0.1.4"
flask-thumbnails-s3 = "^0.1.5"
flatdict = "^4.0.1"
email_validator = "^1.1.2"
shortuuid = "^1.0.1"
s3_saver = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
